--- a/battle1#9.html
+++ b/battle1#9.html
@@ -6,7 +6,7 @@
   body{
     background:#222730;
   }
-  #left,#right,#bsquare, #ssqaure,#scircle{
+  #left,#right,#bsquare{
     position:absolute;
   }
   #left {
@@ -27,23 +27,25 @@
   height:249px;
   width:250px;
   background:#222730;
-  top:25px;
-  left:75px;
+  top:25;
+  left:75;
   transform:rotate(45deg);
   
 }
   #ssqaure{
+    position:relative;
     height:150px;
     width:150px;
-    top:50px;
-    left:50px;
+    top:50;
+    left:50;
     background:#4CAAB3;
   }
   #scircle{
-    top:50px;
-    left:50px;
-    height:50px;
-    width:50px;
+    position:relative;
+    top:50;
+    left:50;
+    height:50;
+    width:50;
     border-radius:30px;
     background:#393E46;
   }
