--- a/battle1#7.html
+++ b/battle1#7.html
@@ -1,33 +1,32 @@
-<div id = "third" class="common"></div>
-<div id = "second" class="common"></div>
-<div id = "first" class="common"></div>
+<div id = "third" class  = "common"></div>
+<div id = "second" class = "common"></div>
+<div id = "first" class  = "common"></div>
 
 <style>
   body{
-    margin:0px;
-    background:#0B2429;
+  margin:0px;
+  background:#0B2429;
   }
 .common{
   top:75px;
   width: 150px;
   height: 150px;
-  border-top-left-radius:100px;
-   border-bottom-right-radius:100px;
+  border-radius:100px 0px 100px 0px;
   position:absolute;
   }
   #third{
-    left:75px;
-    z-index:1;
-    background:#1A4341;
+  left:75px;
+  z-index:1;
+  background:#1A4341;
   }
   #second{
-    left:125px;
-    z-index:2;
-    background:#998235;
+  left:125px;
+  z-index:2;
+  background:#998235;
   }
   #first{
-    z-index:3;
-    background:#F3AC3C;
-    left:174.9px;
+  z-index:3;
+  background:#F3AC3C;
+  left:174.9px;
   }
 </style>
