--- a/battle2#15.html
+++ b/battle2#15.html
@@ -1,40 +1,42 @@
+<div id="lcircle"> </div>
 <div id ="rcircle">
+  <div id = "mcircle"></div>
 </div>
 
-<div id="lcircle"> </div>
-<div id = "mcircle"></div>
+
+
 <style>
   body{
     background:#09042A;
   }
-  #rcircle {
-    position:absolute;
-    top :75;
-    left:75;
-    width: 150px;
+  #lcircle {
+     width: 150px;
     height:150px;
-    border-radius:100px;
+    position:absolute;
+    border-radius:50%;
     background:#7B3F61;
+    top :75px;
+    left:75px; 
   }
-#lcircle{
+#rcircle{
     position:absolute;
-    top :75;
-    left:175;
+    top :75px;
+    right :75px;
     width: 150px;
     height:150px;
-    border-radius:100px;
-    background: #E78481;
+    border-radius:50%;
+    background:#E78481;
+ overflow:hidden;
 }
 
 #mcircle{
-      position:absolute;
-    top :110;
-    left:40%;
-    width: 81;
-    height:81;
-border-radius:100px  0px 100px 0px;
-  transform:rotate(135deg);
-  
-    background: #09042A;
+
+height:150px;
+width:150px;
+  border-radius:50%;
+  position:absolute;
+  top:0;
+  left:-100px;
+  background: #09042A;
 } 
 </style>
